# bibo-emplooyee-tracking

./: .gitignore  .npmrc  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.claude/skills/build-desktop-dmg/: SKILL.md
.claude/skills/build-desktop-exe/: SKILL.md
.claude/skills/deploy-employeetracking/: SKILL.md
apps/backend/: .env.example  .env.prod.example  .env.staging.example  Dockerfile  docker-compose.yml  go.mod  go.sum
apps/backend/storage/: .gitignore
apps/design/: README.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/design/src/: App.tsx  theme.css
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  analytics.ts  api.ts  log.ts  main.tsx  sentry.ts  theme.css  ui.tsx  updater.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.staging.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/dev/: icon.icns
apps/desktop/src-tauri/icons/staging/: icon.icns
apps/desktop/src-tauri/src/: analytics.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/obs/: mod.rs
apps/desktop/src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/server/: mod.rs
apps/desktop/src-tauri/src/settings/: mod.rs
apps/desktop/src-tauri/src/storage/: mod.rs
apps/desktop/src-tauri/src/sync/: auth.rs  client.rs  mod.rs  worker.rs
apps/desktop/src-tauri/src/trackers/: mod.rs
apps/desktop/src-tauri/src/tray/: mod.rs
apps/extension/: PRIVACY.md  README.md  STORE_LISTING.md  background.js  manifest.json  package.json  popup.html  popup.js
apps/web-admin/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/web-admin/src/: App.tsx  format.ts  log.ts  main.tsx  sentry.ts  (+3 more)
deploy/: .env.deploy.example  README.md  build.sh  deploy.sh  setup-vps.sh
docs/: 00-overview.md  01-architecture.md  02-data-model.md  03-macos-permissions.md  04-browser-extension.md  05-roadmap.md  06-macos-compatibility.md  07-ui-design.md  08-dev-codesigning.md  09-menubar-and-dock.md  10-release-signing-notarization.md  11-backend-and-sync.md  12-windows-support-plan.md  13-windows-support-ticket.md  14-signup-and-onboarding.md  ui-design-prompt.md
docs/tickets/: 00-INDEX.md  01-project-scaffold.md  02-qa-project-scaffold.md  03-design-system-theming.md  05-storage-layer.md  07-active-time-tracking.md  08-qa-active-time-tracking.md  09-dashboard-ui.md  100-qa-desktop-onboarding-rail.md  101-signature-background.md  102-qa-signature-background.md  103-onboarding-auth-polish.md  104-member-username-login.md  105-owner-self-tracking.md  106-i18n-foundation.md  107-web-admin-localization.md  108-desktop-localization.md  109-marketing-localization-seo.md  110-qa-i18n.md  111-rebrand-bibotracking.md  112-three-environments.md  113-per-env-db-and-desktop-identity.md  114-production-provisioned-bibotracker.md  115-marketing-per-env-build.md  116-marketing-personas-and-flag-switcher.md  117-app-flag-language-switcher.md  118-release-1.1.0-windows-msi-download.md  119-marketing-macos-windows-messaging.md  12-qa-csv-export.md  120-extension-rebrand-bibo-tracker.md  121-extension-onoff-marker-events.md  122-sentry-backend.md  123-sentry-web-admin.md  124-sentry-desktop.md  125-extension-error-reporting.md  126-logging-strategy.md  127-observability-analytics-autoupdate-releases.md  128-aptabase-analytics-plugin-crash.md  129-analytics-accuracy-device-session-offline-queue.md  13-permission-status-checks.md  (+72 more)
marketing/: README.md  build.mjs  gen.py
marketing/captures/: web-demo.webm
marketing/site/: index.html  robots.txt  sitemap.xml  styles.css
marketing/src/: template.html
scripts/: dev-backend.sh  dev-db.sh  dev-desktop.sh  dev-web.sh  gen-env-icons.py  gen-icons.py  keepalive-oracle.sh  sign-macos.sh  start-env.sh  vps-monitor.sh
sprint/: 00-INDEX.md  01-project-scaffold.md  03-design-system-theming.md  04-qa-theming.md  05-storage-layer.md  06-qa-storage-layer.md  07-active-time-tracking.md  09-dashboard-ui.md  10-qa-dashboard.md  11-csv-export.md  13-permission-status-checks.md  15-permissions-screen-ui.md  16-qa-permissions-screen.md  17-keyboard-counter.md  19-screenshot-capture.md  22-qa-activity-gallery.md  23-ingest-server.md  25-browser-extension.md  26-qa-browser-extension.md  27-browser-activity-ui.md  28-qa-browser-activity-ui.md  29-screenshot-retention.md  30-settings-screen.md  32-json-export-date-range.md  33-final-qa-regression.md  34-menubar-and-dock.md  35-backend-scaffold.md  36-qa-backend-scaffold.md  37-auth-tenant-model.md  39-owner-endpoints.md  40-qa-owner-endpoints.md  41-sync-ingest.md  42-qa-sync-ingest.md  43-screenshot-upload.md  44-qa-screenshot-upload.md  45-reporting-apis.md  46-qa-reporting-apis.md  47-screenshot-retention.md  49-desktop-local-migration-v2.md  51-desktop-auth-session.md  (+13 more)
(+203 files in other folders)
