[package]
name = "ctracking"
version = "1.0.0"
description = "Local-only macOS employee activity tracker"
authors = ["Brian Nguyen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ctracking_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
active-win-pos-rs = "0.8"
tauri-plugin-dialog = "2"
csv = "1"
core-foundation = "0.10"
xcap = "0.9"
webp = "0.3"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

